<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <EditText
        android:id="@+id/newName"
        android:layout_width="218dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/ditt_fulla_namn"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/radioChoice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newDate"
        app:layout_constraintVertical_bias="0.5" />

    <RadioGroup
        android:id="@+id/radioChoice"
        android:layout_width="177dp"
        android:layout_height="52dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newName"
        app:layout_constraintVertical_bias="0.5">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:text="@string/man" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/kvinna" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="114dp"
        android:layout_height="57dp"
        android:text="@string/har_k_rkort"
        app:layout_constraintBottom_toTopOf="@+id/subBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioChoice"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/newDate"
        android:layout_width="218dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/f_delsedatum_10_tecken"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/newName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPass"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/subBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#000000"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/formHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skapa_anv_ndare"
        app:layout_constraintBottom_toTopOf="@+id/newEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/newPass"
        android:layout_width="218dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/nytt_l_senord"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/newDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newEmail"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/newEmail"
        android:layout_width="218dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="Din Email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/newPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formHead"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#000000"
        android:text="@string/bak_t"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/subBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>